2007-02-27  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_video_impl.(cpp,h),
	* gameswf/gameswf_action.cpp:
	netstream object is moved to gameswf/gameswf_classes folder
	* gameswf/gameswf_classes/as_netstream(cpp,h): added
	* gameswf/gameswf_netstream.cpp,h): removed
	* gameswf/win32/VC8/gameswf.vcproj: removed unused files & added new files
	

2007-02-27  Vitaly Alexeev <tishka92@yahoo.com>

	Key object listeners are being handled by movie_root
	* gameswf/gameswf.h: added get_root() to struct as_object_interface
	* gameswf/gameswf_root(cpp,h): removed notify_keypress_listeners()
	and updated notify_key_event()
	* gameswf/gameswf_classes/as_key(cpp,h): removed
	add_listener(), remove_listener(), clear_listener()

2007-02-25  Vitaly Alexeev <tishka92@yahoo.com>

	Preparation for merge keypress_listeners & key listeners(from "as_key")
	* gameswf/gameswf_classes/as_key(cpp,h): added
	virtual	bool as_key::on_event(const event_id& id)
	* gameswf/gameswf_root.(cpp,h): replaced
	character* listener ==>	as_object_interface* listener
	* gameswf/gameswf.h: added
	virtual	bool as_key::on_event(const event_id& id) to as_object_interface
	* gameswf/gameswf_movie.h: removed
	virtual	bool as_key::on_event(const event_id& id) to as_object_interface
	* gameswf/gameswf_text.cpp,
	* gameswf/gameswf_button.cpp,
	* gameswf/gameswf_impl.cpp: updated on_event() declaration

2007-02-25  Vitaly Alexeev <tishka92@yahoo.com>

	struct movie_root is moved
	from
	* gameswf/gameswf_impl.(cpp,h)
	to
	* gameswf/gameswf_root.(cpp,h)
	* gameswf/gameswf_text.cpp,
	* gameswf/gameswf_dlist.cpp: added #include gameswf_root.h
	* gameswf/win32/VC8/gameswf.vcproj: added gameswf_root.(cpp,h)
	
2007-02-25  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_movie.h: added,
	contains struct movie
	* gameswf/gameswf_impl.h: added #include gameswf_movie.h
	* gameswf/win32/VC8/gameswf.vcproj: added gameswf_movie.h
	
2007-02-25  Vitaly Alexeev <tishka92@yahoo.com>
